--- a/HW_Day3_new.ipynb
+++ b/HW_Day3_new.ipynb
@@ -1,161 +1,181 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "4klYNT34p73l"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
-    "id": "P6xk2_jLsvFF"
+    "id": "9qndwAG5UAKi"
    },
    "source": [
-    "# [作業目標]\n",
-    "\n",
-    "1. [簡答題] 請比較 np.zeros 和 np.empty 產生出來的陣列有何差異？為什麼要設計兩種方法？\n",
-    "\n",
-    "```\n",
-    "print(np.zeros((2, 3)))\n",
-    "print(np.empty((2, 3)))\n",
-    "```\n",
-    "\n",
-    "2. 在不用「整數亂數方法」的限制下，如何將包含小數的轉換整數？請將給定的 a 陣列當中的元素變成去掉小數變成整數。\n",
-    "3. 承上題，怎樣可以限制整數的範圍介於 m - n 之間？請將給定的 a 陣列當中的元素的範圍調整成 m - n 之間。"
+    "作業目標<br>\n",
+    "在一個陣列中放入多屬性陣列，進一步對陣列做運算<br>\n",
+    "作業重點<br>\n",
+    "在建立結構化陣列前需要先設定屬性，在做運算時須注意資料屬性"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
-    "id": "uXGll28asvFS"
+    "id": "48DhzHvBUB2c"
    },
    "source": [
-    "# 作業 "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1. [簡答題] 請比較 np.zeros 和 np.empty 產生出來的陣列有何差異？為什麼要設計兩種方法？\n",
-    "\n",
-    "```\n",
-    "print(np.zeros((2, 3)))\n",
-    "print(np.empty((2, 3)))\n",
-    "```\n"
+    "題目:<br>\n",
+    "name_list = ['小明','小華','小菁','小美','小張','John','Mark','Tom']<br>\n",
+    "sex_list = ['boy','boy','girl','girl','boy','boy','boy','boy']<br>\n",
+    "weight_list = [67.5,75.3,50.1,45.5,80.8,90.4,78.4,70.7]<br>\n",
+    "rank_list = [8,1,5,4,7,6,2,3]<br>\n",
+    "myopia_list = [True,True,False,False,True,True,False,False]<br>\n",
+    "1. 將上列list依照['name', 'sex', 'weight', 'rank', 'myopia']順序擺入array，並且資料型態順序擺入[Unicode,Unicode,float,int,boolean]<br>\n",
+    "2. 呈上題，將array中體重(weight)數據集取出算出全部平均體重\n",
+    "3. 呈上題，進一步算出男生(sex欄位是boy)平均體重、女生(sex欄位是girl)平均體重\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "5QrYoyNWsvFS"
+    "id": "5n4rAx-9VgVr"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nYour Code\\n'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "'''\n",
-    "Your Code\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2. 在不用「整數亂數方法」的限制下，如何將包含小數的轉換整數？請將給定的 a 陣列當中的元素變成去掉小數變成整數。\n"
+    "import numpy as np "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "id": "Vl-wSYQdUBcw"
+   },
    "outputs": [],
    "source": [
-    "# 記得先 Import 正確的套件\n",
-    "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "name_list = ['小明','小華','小菁','小美','小張','John','Mark','Tom']\n",
+    "sex_list = ['boy','boy','girl','girl','boy','boy','boy','boy']\n",
+    "weight_list = [67.5,75.3,50.1,45.5,80.8,90.4,78.4,70.7]\n",
+    "rank_list = [8,1,5,4,7,6,2,3]\n",
+    "myopia_list = [True,True,False,False,True,True,False,False]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "e1gVI0tvsvFY"
+    "id": "ElavkYgwVftG"
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[26.59948885 47.53904807 54.11469174]\n",
-      " [70.68669942  6.86886691  4.57672874]]\n",
-      "[[27. 48. 54.]\n",
-      " [71.  7.  5.]]\n",
-      "[[27. 48. 54.]\n",
-      " [71.  7.  5.]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([('小明', 'boy', 67.5, 8,  True), ('小華', 'boy', 75.3, 1,  True),\n",
+       "       ('小菁', 'girl', 50.1, 5, False), ('小美', 'girl', 45.5, 4, False),\n",
+       "       ('小張', 'boy', 80.8, 7,  True), ('John', 'boy', 90.4, 6,  True),\n",
+       "       ('Mark', 'boy', 78.4, 2, False), ('Tom', 'boy', 70.7, 3, False)],\n",
+       "      dtype=[('name', '<U5'), ('sex', '<U5'), ('weight', '<f8'), ('rank', '<i4'), ('myopia', '?')])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 參考解答\n",
-    "\n",
-    "a = np.random.rand(2, 3)\n",
-    "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3. 承上題，怎樣可以限制整數的範圍介於 m - n 之間？請將給定的 a 陣列當中的元素的範圍調整成 m - n 之間。\n"
+    "#1. 將上列list依照['name', 'sex', 'weight', 'rank', 'myopia']順序擺入array，並且資料型態順序擺入[Unicode,Unicode,float,int,boolean]\n",
+    "dt = np.dtype({'names':('name','sex','weight','rank','myopia'),'formats':('U5','U5','f8','i4','?')})\n",
+    "c = np.zeros(8,dtype=dt)\n",
+    "c['name'] = name_list\n",
+    "c['sex'] = sex_list\n",
+    "c['weight'] = weight_list\n",
+    "c['rank'] = rank_list\n",
+    "c['myopia'] = myopia_list\n",
+    "c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "id": "N-xffNSVWbP1"
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[34. 33. 38.]\n",
-      " [39. 23. 20.]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "69.8375"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "m = 20\n",
-    "n = 40\n",
-    "\n",
-    "'''\n",
-    "Your Code\n",
-    "'''"
+    "#2. 呈上題，將array中體重(weight)數據集取出算出全部平均體重\n",
+    "c['weight'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "id": "_LhLg8RiWwEm"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "77.18333333333332"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#3. 呈上題，進一步算出男生(sex欄位是boy)平均體重\n",
+    "c[c['sex']=='boy']['weight'].mean()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "f_J05IPxX6fg"
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "#3. 呈上題，進一步算出女生(sex欄位是girl)平均體重"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "id": "eX63rZnX3d5O"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "47.8"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c[c['sex']=='girl']['weight'].mean()"
+   ]
   },
   {
    "cell_type": "code",
@@ -167,7 +187,9 @@
  ],
  "metadata": {
   "colab": {
-   "name": "Day_023_HW.ipynb",
+   "authorship_tag": "ABX9TyNgR7Bv7joIZkErlgUY/y+3",
+   "collapsed_sections": [],
+   "name": "作業_Hong題目.ipynb",
    "provenance": []
   },
   "kernelspec": {
@@ -185,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
